--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,8 @@
     <h2>Джанго проект</h2>
     <img src="https://masterzoo.ua/content/uploads/images/dzhungarskij-homyak-masterzoo-ua.jpg" width="400">
     <a href="{% url 'contacts' %}">На контакты</a>
-
+    <a href="{% url 'rabotnik' id=0 %}">Работник месяца1</a>
+    <a href="{% url 'rabotnik' id=1 %}">Работник месяца2</a>
+    <a href="{% url 'rabotnik' id=2 %}">Работник месяца3</a>
 </body>
 </html>
